--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-PaperMod"]
 	path = themes/hugo-PaperMod
-	url = git@github.com:cassiepearson/hugo-PaperMod.git
+	url = git@github.com:pearsonify/hugo-PaperMod.git:master
